<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    android:background="@color/lightgray"
        >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="65dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/darkred"
            android:fontFamily="@font/cinzel_variable_font_weight"
            />
        <ImageButton
            android:id="@+id/infoButtonRules"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/info_button"
            android:scaleType="fitCenter"
            android:background="@color/lightgray"
            android:contentDescription="@string/info_button"
            android:layout_gravity="end"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/cinzel_variable_font_weight"
            />
    </FrameLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-40dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:contentDescription="@string/logo_name"
        android:src="@drawable/logo"
android:layout_marginTop="-150dp"
             />

    <EditText
        android:id="@+id/playerNameText"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:autofillHints="Enter your name"
        android:hint="@string/player_name_hint"
        android:layout_gravity="center"
        android:background="@drawable/rounded_input"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textSize="12sp"
        android:maxLength="6"
        android:fontFamily="@font/cinzel_variable_font_weight"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/easyButton"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:text="@string/easy_button"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/cinzel_variable_font_weight"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mediumButton"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:text="@string/medium_button"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginStart="70dp"
        android:fontFamily="@font/cinzel_variable_font_weight"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/offlineButton"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button"
        android:text="@string/offline_button"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginStart="0dp"
        android:fontFamily="@font/cinzel_variable_font_weight"/>

</FrameLayout>
</LinearLayout>