<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/darkred"
        />
    <FrameLayout
        android:id="@+id/opponent_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/dieOpponent"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="40dp"
            android:background="@color/opponentcoloroverlay" />

        <FrameLayout
    android:id="@+id/nameandpoints_opponent"
    android:layout_width="130dp"
    android:layout_height="100dp"
    android:padding="10dp"
    android:layout_gravity="end"
    android:layout_marginTop="165dp"
    >
    <TextView
        android:id="@+id/opponent_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opponent_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/opponentcolor"
        android:padding="8dp"
        android:layout_gravity="start"
        />
    <TextView
        android:id="@+id/opponent_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/opponentcolor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/opponent_score"
        android:padding="8dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="start"
        />

</FrameLayout>
    <GridLayout
        android:id="@+id/computerBoard"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:columnCount="3"
        android:rowCount="3"
        android:background="@color/opponentcolor"
        android:padding="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp">
        <ImageView
            android:id="@+id/opponentBoard_17"
            android:layout_width="64dp"
            android:layout_height="55dp"
            android:layout_gravity="fill"
            android:background="@color/opponentcoloroverlay"
            android:layout_marginBottom="1dp"/>
        <ImageView
            android:id="@+id/opponentBoard_16"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:background="@color/opponentcoloroverlay"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"/>
        <ImageView
            android:id="@+id/opponentBoard_15"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:background="@color/opponentcoloroverlay"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"/>
        <ImageView
            android:id="@+id/opponentBoard_14"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:background="@color/opponentcoloroverlay"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"/>
        <ImageView
            android:id="@+id/opponentBoard_13"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:background="@color/opponentcoloroverlay"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"/>
        <ImageView
            android:id="@+id/opponentBoard_12"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:background="@color/opponentcoloroverlay"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"/>
        <ImageView
            android:id="@+id/opponentBoard_11"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:background="@color/opponentcoloroverlay"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"/>
        <ImageView
            android:id="@+id/opponentBoard_10"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:background="@color/opponentcoloroverlay"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"/>
        <ImageView
            android:id="@+id/opponentBoard_09"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:background="@color/opponentcoloroverlay"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"/>
    </GridLayout>
    </FrameLayout>
    <ImageButton
        android:id="@+id/infoButtonRules"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/info_button"
        android:scaleType="fitCenter"
        android:background="@color/lightgray"
        android:contentDescription="@string/info_button"
        android:layout_gravity="center"
        android:layout_marginTop="-5dp"
        />
    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/diemain"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginEnd="300dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/maincoloroverlay"/>
    <FrameLayout
        android:id="@+id/nameandpoints_main"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:padding="14dp"
        android:layout_gravity="start"
        android:layout_marginTop="145dp"
        >
        <TextView
            android:id="@+id/main_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/maincolor"
            android:padding="8dp"
            android:layout_gravity="start"
            />
        <TextView
            android:id="@+id/main_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/maincolor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/main_score"
            android:padding="8dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="start"
            />
    </FrameLayout>
        <GridLayout
            android:id="@+id/playerBoard"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:columnCount="3"
            android:rowCount="3"
            android:background="@color/maincolor"
            android:padding="5dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            >
            <ImageView
                android:id="@+id/playerBoard_00"
                android:layout_width="64dp"
                android:layout_height="55dp"
                android:layout_gravity="fill"
                android:background="@color/maincoloroverlay"
                android:layout_marginBottom="1dp"/>
            <ImageView
                android:id="@+id/playerBoard_01"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_gravity="fill"
                android:background="@color/maincoloroverlay"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"/>
            <ImageView
                android:id="@+id/playerBoard_02"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_gravity="fill"
                android:background="@color/maincoloroverlay"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"/>
            <ImageView
                android:id="@+id/playerBoard_03"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_gravity="fill"
                android:background="@color/maincoloroverlay"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"/>
            <ImageView
                android:id="@+id/playerBoard_04"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_gravity="fill"
                android:background="@color/maincoloroverlay"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"/>
            <ImageView
                android:id="@+id/playerBoard_05"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_gravity="fill"
                android:background="@color/maincoloroverlay"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"/>
            <ImageView
                android:id="@+id/playerBoard_06"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_gravity="fill"
                android:background="@color/maincoloroverlay"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"/>
            <ImageView
                android:id="@+id/playerBoard_07"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_gravity="fill"
                android:background="@color/maincoloroverlay"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"/>
            <ImageView
                android:id="@+id/playerBoard_08"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_gravity="fill"
                android:background="@color/maincoloroverlay"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"/>
        </GridLayout>
    </FrameLayout>
    <ImageButton
        android:id="@+id/backToMenu"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/arrow_back"
        android:layout_gravity="center"
        android:contentDescription="@string/back_to_main" />
</LinearLayout>